css/styles.css
/* ... */
#main-nav ul li a:hover{
    color: rgb(192, 192, 192);
}

#menu-icon{
    position: fixed;
    display: none;
    width: 35px;
    margin-top: 8%;
    margin-left: 90%;
    z-index: 15;
    cursor: pointer;
}

#menu-icon .menu-icon-bar{
    width: 35px;
    height: 5px;
    background-color: white;
    -webkit-transition: all 0.4s;
    -moz-transition: all 0.4s;
    -o-transition: all 0.4s;
    -ms-transition: all 0.4s;
    transition: all 0.4s;
}

#menu-icon .menu-icon-bar:not(:last-child){
    margin-bottom: 5px;
}

.active-menu-icon .menu-icon-bar:first-child{
    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
    -moz-transform: rotate(-45deg) translate(-9px, 6px);
    -o-transform :rotate(-45deg) translate(-9px, 6px);
    -ms-transform: rotate(-45deg) translate(-9px, 6px);
    transform: rotate(-45deg) translate(-9px, 6px);
}

.active-menu-icon .menu-icon-bar:nth-child(2){
    opacity: 0;
}

.active-menu-icon .menu-icon-bar:last-child{
    -webkit-transform: rotate(45deg) translate(-9px, -4px);
    -moz-transform: rotate(45deg) translate(-9px, -4px);
    -o-transform :rotate(45deg) translate(-9px, -4px);
    -ms-transform: rotate(45deg) translate(-9px, -4px);
    transform: rotate(45deg) translate(-9px, -4px);
}

#side-nav{
    position: fixed;
    z-index: 10;
    top: 25%;
    height: 300px;
    width: 30px;
    margin-left: 20px;
    visibility: hidden;
}

#side-nav ul li a{
    font-size: 85%;
    padding-left: 8px;
    margin-top: 15px;
    border-left: 1px solid rgba(255, 255, 255, 0.5);
}

#side-nav ul li a.active{
    border-left: 2px solid rgba(255, 255, 255, 1);
}

#side-nav ul li a.active span{
    -webkit-animation: fadeout 1s linear 0.1s;
    -moz-animation: fadeout 1s linear 0.1s;
    -o-animation: fadeout 1s linear 0.1s;
    -ms-animation: fadeout 1s linear 0.1s;
    animation: fadeout 1s linear 0.1s;
}

#side-nav ul li a span{
    opacity: 0;
}

#side-nav ul li a:hover span{
    opacity: 1;
}

section{
    width: 100%;
    overflow: hidden;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#home{
    background-image: url(../img/home-background.jpg);
}

#main-title, .title{
    font-weight: 800;
    letter-spacing: 15px;
}

#main-title, .title, .subtitle{
    text-align: center;
    font-family: 'Poppins', Arial, sans-serif;
}

#main-title{
    width: 50%;
    margin-top: 22%;
    font-size: 80px;
    margin-bottom: 25%;
}

.title{
    width: 100%;
    margin-top: 6%;
    font-size: 50px;
}

.subtitle{
    font-weight: 700;
    letter-spacing: 5px;
    font-size: 24px;
}

.centered{
    margin-left: auto;
    margin-right: auto;
}

#about{
    background-image: url(../img/about-background.jpg);
}

#about-picture{
    width: 270px;
    height: 270px;
    margin-top: 2%;
    background-image: url(../img/picture-of-myself.jpg);
    background-size: cover;
    border: 1px solid rgb(105, 105, 105);
    border-radius: 50%;
}

#about-subtitle{
    width: 50%;
    margin-top: 3%;
}

#about-text, .more-info{
    text-align: center;
}

#about-text{
    width: 65%;
    margin-top: 4%;
    font-size: 18px;
}

.more-info{
    width: 100%;
    margin-top: 45px;
    margin-bottom: 9%;
}

.more-info a{
    width: 240px;
    font-weight: 400;
    display: block;
    color: black;
    padding: 7px 0px;
    margin-top: 5px;
    background-color: white;
    border-radius: 30px;
    -webkit-transition: background-color 0.6s;
    -moz-transition: background-color 0.6s;
    -o-transition: background-color 0.6s;
    -ms-transition: background-color 0.6s;
    transition: background-color 0.6s;
}

.more-info a:hover{
    background-color: rgb(168, 168, 168);
}

#experience{
    background-image: url(../img/experience-background.jpg);
}

#experience-content-wrapper{
    position: relative;
    width: 76%;
    height: 1180px;
    top: 120px;
    margin-bottom: 20%;
}

#experience-timeline-wrapper{
    height: 880px;
    width: 15px;
}

.circle{
    position: relative;
    width: 15px;
    height: 15px;
    border-radius: 50%;
    background-color: white;
    z-index: 1;
}

/* Applies bottom margin space to all circles but last one, creating a space between them. */
.circle:not(:last-child){
    margin-bottom: 270px;
}

.circle:first-child{
    margin-bottom: 310px;
}

.circle:nth-child(3){
    margin-bottom: 245px;
}

.vertical-line{
    width: 4px;
    height: 0%;
    background-color: rgb(146, 146, 146);
    margin-top: -1150px;
}

.experience-content{
    font-family: 'Poppins', Arial, sans-serif;
    position: relative;
    top: -75%;
    width: 45%;
    height: 285px;
    opacity: 0;
}

.experience-content:nth-child(2){
    height: 325px;
}

.experience-content:last-child{
    top: -77%;
}

.left{
    text-align: right;
}

.right{
    left: 54%;
    text-align: left;
}

.experience-details{
    display: block;
    width: 100%;
    padding: 5px 0px;
}

.experience-details div{
    margin-top: 10px;
}

.job-date{
    font-size: 105%;
    font-weight: 700;
    padding: 0;
}

.job-title{
    font-size: 120%;
    color: rgb(206, 207, 212);
    font-weight: 700;
}

.job-location{
    color: rgb(212, 213, 219);
    font-weight: 600;
}

.job-description{
    font-family: 'Open Sans', Tahoma, sans-serif;
}

#skills{
    background-image: url(../img/skills-background.jpg);
}

#skills-subtitle{
    width: 60%;
    margin-top: 30px;
}

#skills-content-wrapper{
    height: 650px;
    width: 70%;
    margin-top: 6%;
    margin-left: 15.5%;
    margin-bottom: 10%;
}

.skill-content{
    display: block;
    height: 30px;
    padding-top: 5px;
    margin-bottom: 25px;
    font-size: 14pt;
}

.skill-content .skill-title, .skill-content .skill-value{
    display: block;
}

.skill-content .skill-title{
    width: 162px;
    text-align: right;
    float: left;
    margin-top: -2.5px;
}

.skill-content .skill-value{
    width: 38px;
    margin-top: -19.5px;
    opacity: 0;
}
/* ... */

